--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.12.13",
-    "@types/jest": "^26.0.20"
+    "@types/jest": "^26.0.20",
+    "axios": "^0.21.1"
   }
 }
